Fix colour contrast issue in labels
For the .label-primary the background colour and text colour were
swapped when assigning them to variables. This has caused an issue
with the colour contrast.

--- a/app/assets/stylesheets/govuk_admin_template/_bootstrap_overrides.scss
+++ b/app/assets/stylesheets/govuk_admin_template/_bootstrap_overrides.scss
@@ -42,8 +42,8 @@ $govuk-tag-light-red: #f6d7d2;
 }
 
 .label-primary {
-  color: $govuk-tag-mid-blue;
-  background: $govuk-tag-white;
+  color: $govuk-tag-white;
+  background: $govuk-tag-mid-blue;
 }
 
 .label-success {
